change some thing

--- a/_posts/2015-08-11-多线程使用.markdown
+++ b/_posts/2015-08-11-多线程使用.markdown
@@ -34,14 +34,14 @@ comments: true
 1.
 
 	#import "NSThreadViewController.h"
-	
+
 	@implementation NSThreadViewController
 
 	- (void)viewDidLoad {
     	[super viewDidLoad];
     	// 线程创建，执行 Target 的 selector 方法，并传入 object 参数
     	NSThread * thread = [[NSThread alloc] initWithTarget:self selector:@selector(waitForRun:) object:params];
-    	
+
     	// 声明线程优先级
     	thread.threadPriority = 1.0;
     	// 为线程命名，便于区分
@@ -54,12 +54,12 @@ comments: true
 2.
 
 	#import "NSThreadViewController.h"
-	
+
 	@implementation NSThreadViewController
 
 	- (void)viewDidLoad {
     	[super viewDidLoad];
-    	
+
     	// 线程创建后立刻执行，执行 Target 的 selector 方法，并传入 object 参数
     	[NSThread detachNewThreadSelector:self toTarget:@selector(waitForRun:) withObject:params];
 	}
@@ -68,12 +68,12 @@ comments: true
 3.
 
 	#import "NSThreadViewController.h"
-	
+
 	@implementation NSThreadViewController
 
 	- (void)viewDidLoad {
     	[super viewDidLoad];
-    	
+
     	// 线程隐式创建后立刻执行，执行 self 的 selector 方法，并传入 object 参数
     	[self performSelector:@selector(waitForRun:) withObject:params];
 
@@ -89,41 +89,41 @@ comments: true
 下面，我们用`NSThread`写一个经典的异步线程下载图片数据，再回到主线程刷新UI的小Demo：
 
 	#import "NSThreadViewController.h"
-	
+
 	#define ImgUrl @"http://oaldigvho.bkt.clouddn.com/bradleyJohnson.jpg"
-	
+
 	@interface NSThreadViewController ()
 
 	@property (nonatomic , strong) UIImageView * imgView;
 
 	@end
-	
+
 	@implementation NSThreadViewController
 
 	- (void)viewDidLoad {
     	[super viewDidLoad];
-    	
+
     	self.imgView = [[UIImageView alloc] initWithFrame:CGRectMake(0, 100, self.view.bounds.size.width, self.view.bounds.size.height-200)];
     	self.imgView.backgroundColor = [UIColor lightGrayColor];
     	[self.view addSubview:self.imgView];
-    
+
     	NSThread * thread = [[NSThread alloc] initWithTarget:self selector:@selector(downLoadImageData:) object:ImgUrl];
     	thread.name = @"downloadData";
     	[thread start];
-    	
+
     	NSLog(@"Main thread : %@",[NSThread currentThread]);
 	}
 
 	-(void)downLoadImageData:(NSString *)url
 	{
     	NSData * data = [NSData dataWithContentsOfURL:[NSURL URLWithString:url]];
-    
+
     	if (data) {
-    		
+
         	NSLog(@"Ready for data thread : %@",[NSThread currentThread]);
         	// 休眠两秒
         	[NSThread sleepForTimeInterval:2];
-        	
+
         	// 跳回主线程刷新 UI （线程间通讯就发生在这里）
         	[self performSelectorOnMainThread:@selector(reloadUI:) withObject:data waitUntilDone:NO];
     	}
@@ -132,10 +132,10 @@ comments: true
 	-(void)reloadUI:(NSData *)data
 	{
 		NSLog(@"Reload UI thread : %@",[NSThread currentThread]);
-		    
+
     	self.imgView.image = [UIImage imageWithData:data];
 	}
-	
+
 	@end
 
 效果如图：
@@ -162,45 +162,45 @@ comments: true
 值得注意的是，`NSOperation`是个抽象类无法直接使用，一般我们都会使用它的子类`NSInvocationOperation`和`NSBlockOperation`来创建任务对象，再对其调用`start`方法执行。
 
 	#import "NSThreadViewController.h"
-	
+
 	@implementation NSThreadViewController
 
 	- (void)viewDidLoad {
     	[super viewDidLoad];
     	// 任务创建，执行 Target 的 selector 方法，并传入 object 参数
     	NSInvocationOperation * invocationOpe = [[NSInvocationOperation alloc] initWithTarget:target selector:@selector(waitFroRun:) object:params];
-    	
+
     	// 启动任务
     	[invocationOpe start];
 	}
 	@end
 
 但是，大家会发现，这是在当前线程执行的。所以为了并发执行，我们可以使用`NSBlockOperation`来创建和添加多任务，这样多任务就会在主线程和子线程中并发执行。
-	
+
 	#import "NSThreadViewController.h"
-	
+
 	@implementation NSThreadViewController
 
 	- (void)viewDidLoad {
     	[super viewDidLoad];
-    	
+
     	NSBlockOperation * blockOperation = [NSBlockOperation blockOperationWithBlock:^{
-        
+
         	//do something
-        
+
     	}];
-    
+
     	// 添加其它任务进来
     	[blockOperation addExecutionBlock:^{
-        
+
         	// add another block
-        
+
     	}];
-    
+
     	[blockOperation start];
 	}
 	@end
-	
+
 (注意：`addExecutionBlock`方法必须在`start`方法之前执行，不然会引起崩溃。）
 <br>
 <br>
@@ -212,27 +212,27 @@ comments: true
 &nbsp;&nbsp;&nbsp;&nbsp; 在`NSOperationQueue`中，线程只有两种，主线程和其它线程，主线程我们可以通过 `[NSOperationQueue mainQueue]` 获取到，而所有通过创建获得的线程，统统都是子线程。
 
 	#import "NSThreadViewController.h"
-	
+
 	@implementation NSThreadViewController
 
 	- (void)viewDidLoad {
     	[super viewDidLoad];
-    	
+
     	 NSBlockOperation * blockOperation = [NSBlockOperation blockOperationWithBlock:^{
-        
+
         	//do something
-        
+
     	}];
-    
+
     	// 添加其它任务进来
     	[blockOperation addExecutionBlock:^{
-        
+
         	// add another block
-        
+
     	}];
-    
+
     	NSInvocationOperation * invocationOperation = [[NSInvocationOperation alloc] initWithTarget:target selector:@selector(waitForRun:) object:params];
-    	
+
     	// 创建队列（其它队列），队列中的所以任务都是并发进行 ，如果希望是串行，则将maxConcurrentOperationCount 最大并发数量 设置为1
     	NSOperationQueue * queue = [[NSOperationQueue alloc] init];
     	//        queue.maxConcurrentOperationCount = 1;
@@ -244,37 +244,37 @@ comments: true
 而且`NSOperation`有一个十分实用的功能，就是任务之间添加依赖，当然也可以解除依赖。也就是说，如果A任务的进行必须建立在B任务的完成之上的话，我们可以用`addDependency`来将A任务依赖给B任务：<br>
 
 	#import "NSThreadViewController.h"
-	
+
 	@implementation NSThreadViewController
 
 	- (void)viewDidLoad {
     	[super viewDidLoad];
-    	
+
     	 NSBlockOperation * blockOperationOne = [NSBlockOperation blockOperationWithBlock:^{
-        
+
         	//do something
-        
+
     	}];
-    
+
     	NSBlockOperation * blockOperationTwo = [NSBlockOperation blockOperationWithBlock:^{
-        
+
         	//do something
-        
+
     	}];
-    
+
     	NSBlockOperation * blockOperationThree = [NSBlockOperation blockOperationWithBlock:^{
-        
+
         	//do something
-        
+
     	}];
-    
+
     	// 添加依赖
     	[blockOperationTwo addDependency:blockOperationOne];
     	[blockOperationThree addDependency:blockOperationTwo];
-    
+
     	// 解除依赖
 		//    [blockOperationThree removeDependency:blockOperationTwo];
-    
+
     	NSOperationQueue * queue = [[NSOperationQueue alloc] init];
     	[queue addOperations:@[blockOperationOne,blockOperationTwo,blockOperationThree] waitUntilFinished:NO];
     }
@@ -303,27 +303,27 @@ comments: true
     	[self.view addSubview:self.imgView];
 
     	NSInvocationOperation * invocationOperation = [[NSInvocationOperation alloc] initWithTarget:self selector:@selector(downLoadImageData:) object:ImgUrl];
-    
+
     	NSOperationQueue * queue = [[NSOperationQueue alloc] init];
     	[queue addOperation:invocationOperation];
-    
+
     	NSLog(@"Main thread : %@",[NSThread currentThread]);
 	}
 
 	-(void)downLoadImageData:(NSString *)url
 	{
     	NSData * data = [NSData dataWithContentsOfURL:[NSURL URLWithString:url]];
-    
+
     	if (data) {
-        
+
         	NSLog(@"Ready for data thread : %@",[NSThread currentThread]);
-        
+
         	[NSThread sleepForTimeInterval:2];
-        
+
         	// 跳回主线程刷新 UI
-        
+
         	NSInvocationOperation * invocationOperation = [[NSInvocationOperation alloc] initWithTarget:self selector:@selector(reloadUI:) object:data];
-        
+
         	[[NSOperationQueue mainQueue] addOperation:invocationOperation];
     	}
 	}
@@ -331,12 +331,12 @@ comments: true
 	-(void)reloadUI:(NSData *)data
 	{
     	NSLog(@"Reload UI thread : %@",[NSThread currentThread]);
-    
+
     	self.imgView.image = [UIImage imageWithData:data];
 	}
 
 	@end
-	
+
 效果图基本如同上一个，就不录制效果图了，但是Log日志还是放一下:
 <br>
 ![Log](http://oaldigvho.bkt.clouddn.com/2.2.png)
@@ -357,10 +357,10 @@ comments: true
 
 	- (void)viewDidLoad {
     	[super viewDidLoad];
-    
+
     	// 创建队列，声明队列名称，指定为并行队列
     	dispatch_queue_t queue = dispatch_queue_create("first.queue", DISPATCH_QUEUE_CONCURRENT);
-    
+
     	// 指定异步操作
     	dispatch_async(queue, ^{
         	// 添加任务
@@ -395,60 +395,60 @@ comments: true
 
 	- (void)viewDidLoad {
     	[super viewDidLoad];
-    
+
     	dispatch_queue_t queue1 = dispatch_queue_create("first.queue", DISPATCH_QUEUE_CONCURRENT);
     	dispatch_queue_t queue2 = dispatch_queue_create("first.queue", DISPATCH_QUEUE_SERIAL);
-    
+
     	dispatch_sync(queue1, ^{
         	NSLog(@"q1 sync - the thread : %@",[NSThread currentThread]);
     	});
-    
+
     	dispatch_async(queue1, ^{
         	NSLog(@"q1 async 1 - the thread : %@",[NSThread currentThread]);
     	});
-    
+
     	dispatch_async(queue1, ^{
         	NSLog(@"q1 async 2 - the thread : %@",[NSThread currentThread]);
     	});
-    
+
     	dispatch_async(queue1, ^{
         	NSLog(@"q1 async 3 - the thread : %@",[NSThread currentThread]);
     	});
-    
+
     	dispatch_async(queue1, ^{
         	NSLog(@"q1 async 4 - the thread : %@",[NSThread currentThread]);
     	});
-    
+
     	dispatch_sync(queue2, ^{
         	NSLog(@"q2 sync - the thread : %@",[NSThread currentThread]);
     	});
-    
+
     	dispatch_async(queue2, ^{
         	NSLog(@"q2 async 1 - the thread : %@",[NSThread currentThread]);
     	});
-    
+
     	dispatch_async(queue2, ^{
         	NSLog(@"q2 async 2 - the thread : %@",[NSThread currentThread]);
     	});
-    	
+
     	dispatch_async(queue2, ^{
         	NSLog(@"q2 async 3 - the thread : %@",[NSThread currentThread]);
     	});
-    
+
     	dispatch_async(queue2, ^{
         	NSLog(@"q2 async 4 - the thread : %@",[NSThread currentThread]);
     	});
-        
+
     	NSLog(@"Main thread : %@",[NSThread currentThread]);
 		}
 
 	@end
-	
-	
-	
-	
-	
-	
+
+
+
+
+
+
 <br>
 这里我们创建了并行和串行两个队列，分别在同步和异步中执行，我们看看打印:
 <br><br>
@@ -475,12 +475,12 @@ comments: true
     	self.imgView = [[UIImageView alloc] initWithFrame:CGRectMake(0, 100, self.view.bounds.size.width, self.view.bounds.size.height-200)];
     	self.imgView.backgroundColor = [UIColor lightGrayColor];
     	[self.view addSubview:self.imgView];
-    
+
 		dispatch_async(dispatch_get_global_queue(DISPATCH_QUEUE_PRIORITY_DEFAULT, 0), ^{
         	[self downLoadImageData:ImgUrl];
     	});
-    
-    
+
+
     	NSLog(@"Main thread : %@",[NSThread currentThread]);
 
 	}
@@ -488,13 +488,13 @@ comments: true
 	-(void)downLoadImageData:(NSString *)url
 	{
     	NSData * data = [NSData dataWithContentsOfURL:[NSURL URLWithString:url]];
-    
+
     	if (data) {
-        
+
         	NSLog(@"Ready for data thread : %@",[NSThread currentThread]);
-        
+
         	[NSThread sleepForTimeInterval:2];
-        
+
         	// 跳回主线程刷新 UI
         	dispatch_async(dispatch_get_main_queue(), ^{
             	[self reloadUI:data];
@@ -505,12 +505,12 @@ comments: true
 	-(void)reloadUI:(NSData *)data
 	{
     	NSLog(@"Reload UI thread : %@",[NSThread currentThread]);
-    
+
     	self.imgView.image = [UIImage imageWithData:data];
 	}
 
 	@end
-	
+
 效果和Log相信大家也都能猜得到，就不贴图了。
 <br>
 
@@ -523,13 +523,13 @@ comments: true
 
 	- (void)viewDidLoad {
     	[super viewDidLoad];
-    
+
     	// 创建队列组
     	dispatch_group_t group = dispatch_group_create();
-    
+
     	dispatch_queue_t queueOne = dispatch_queue_create("queue.one", DISPATCH_QUEUE_CONCURRENT);
     	dispatch_queue_t queueTwo = dispatch_queue_create("queue.two", DISPATCH_QUEUE_CONCURRENT);
-    
+
     	// 队列组异步完成队列任务
     	dispatch_group_async(group, queueOne, ^{
         	//do something
@@ -542,14 +542,16 @@ comments: true
     	dispatch_group_notify(group, dispatch_get_main_queue(), ^{
         	NSLog(@"Finish");
     	});
-    
+
 	}
 
 	@end
 
 
 
-
+```Object-C
+    Developer * develop = [Developer new];
+```
 
 ***
 
