--- a/_posts/2015-08-11-多线程使用.markdown
+++ b/_posts/2015-08-11-多线程使用.markdown
@@ -549,8 +549,10 @@ comments: true
 
 
 
-```Object-C
+```
     Developer * develop = [Developer new];
+    develop.name = @"BradleyJohnson";
+    develop.age  = 24;
 ```
 
 ***
